# csci_420_robotics_labs

./: .gitignore
lab1_ws/src/rocketship/: package.xml
lab1_ws/src/rocketship/src/: countdown_node.cpp  main_controller_node.cpp
lab2_ws/lab2_p1_ws/src/rocketship/: CMakeLists.txt
lab2_ws/lab2_p1_ws/src/rocketship/launch/: rocket.launch
lab2_ws/lab2_p1_ws/src/rocketship/src/: main_controller_node.cpp  rocket_engine.py
lab2_ws/lab2_p2_ws/src/flightcontroller/: CMakeLists.txt
lab2_ws/lab2_p2_ws/src/flightcontroller/launch/: angle.launch  fly.launch  position.launch  velocity.launch
lab2_ws/lab2_p2_ws/src/flightcontroller/src/: angle_controller.py  position_controller.py  velocity_controller.py
lab2_ws/lab2_p2_ws/src/sensor_simulation/: package.xml
lab2_ws/lab2_p2_ws/src/sensor_simulation/launch/: sensors.launch
lab2_ws/lab2_p2_ws/src/visualizer/src/: gui.py
lab3_ws/src/flightcontroller/launch/: fly.launch
lab3_ws/src/simple_sim/simple_sim/: simple_sim_node.py
lab3_ws/src/visualizer/src/: gui.py  gui_controller.py
lab4_ws/src/flightcontroller/launch/: fly.launch
lab4_ws/src/sensor_simulation/: CMakeLists.txt
lab4_ws/src/sensor_simulation/launch/: sensors.launch
lab4_ws/src/sensor_simulation/src/: pressure.py
lab4_ws/src/simple_control/: setup.py
lab4_ws/src/simple_sim/simple_sim/: simple_sim_node.py
lab4_ws/src/visualizer/rviz/: uav.rviz
lab5_ws/src/flightcontroller/launch/: fly.launch
lab5_ws/src/perception/: package.xml  setup.py
lab5_ws/src/perception/perception/: debug_detection.py  perception.py
lab5_ws/src/sensor_simulation/: package.xml
lab5_ws/src/sensor_simulation/launch/: sensors.launch
lab5_ws/src/sensor_simulation/src/: lidar.py  noise_and_transformations.py
lab5_ws/src/simple_control/: setup.py
lab5_ws/src/simple_control/simple_control/: geofence_and_mission.py  visit_waypoints.py
lab5_ws/src/simple_sim/simple_sim/: simple_sim_node.py
lab6_ws/lab6_ws/src/simple_control/: setup.py
lab6_ws/src/flightcontroller/: CMakeLists.txt
lab6_ws/src/flightcontroller/launch/: fly.launch
lab6_ws/src/sensor_simulation/launch/: sensors.launch
lab6_ws/src/simple_control/: setup.py
lab6_ws/src/simple_control/simple_control/: keyboard_manager.py
lab6_ws/src/visualizer/src/: gui.py
(+9 files in other folders)
